# hclmpifft

./: COPYING  README
basefftw/: Makefile  mpifftw.c
common/: README  fpm.c  fpm.h  hclfftw.h  initmatrix.c  initmatrix.h  mpicomm.c  mpicomm.h  transpose.c  transpose.h
fft2d_sequential/fftw-3.3.7/: Makefile  fftw.cpp  fftw3.c  run2dfftw3t36.sh  run2dfftw3t72.sh
fftw/: Makefile  Makefile_bench  Makefile_cluster  README  fftw.c  fftw2_script.sh  fftw_bench.sh  fftw_cluster.c  fftw_cluster.sh  hclfftw.h  mpifftw.c  mpifftw_cluster.c  mpifftw_cluster_bench.c
fpmbuilder/fftw/: Makefile  bestlb.c  constructfpm.c  fftw.c
fpmbuilder/intelmkl/: Makefile  constructfpm.c
hpopt/: AUTHORS  CMakeLists.txt  COPYING  Doxyfile.in  README
hpopt/doc/: Results_Core2Duo_2GHz.ods  Results_Pentium_D.ods
hpopt/doc/report/: Report.tex  randomTimeFunction.ods  smapleTimeFunction.ods  tree.odg
hpopt/doc/report/Images/example/odgFiles/: fig1.odg  fig2.odg  fig3.odg  fig4.odg  fig5.odg  fig6.odg  fig7.odg  fig8.odg
hpopt/include/: dirhelper.h  filehelper.h  functionclass.h  hcl_hpopta.h  memorization.h  wdistmethods.h
hpopt/scripts/: runCompDist.sh  runwdist.sh
hpopt/src/: CMakeLists.txt  dirhelper.cpp  filehelper.cpp  functionclass.cpp  hcl_hpopta.cpp  memorization.cpp  wdistmethods.cpp
hpopt/tools/: CMakeLists.txt  README  compDist.cpp  func_generator.cpp  workdist.cpp
intelmkl/: Makefile  fftw.c  mpifftw.c
tauloplib/: README  fpm_cluster.c  hclfftw_cluster.h  mpicomm.c  mpicomm.h  transpose.c  transpose.h
